// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar Description as slot renders correctly 1`] = `
<div
  class="fd-action-bar"
>
  <!---->
   
  <div
    class="fd-action-bar__header"
  >
    <h1
      class="fd-action-bar__title"
    >
      
        
      
    </h1>
     
    <p
      class="fd-action-bar__description"
    >
      <div>
        Page Description (slot)
      </div>
    </p>
  </div>
   
  <!---->
</div>
`;

exports[`ActionBar Title as slot renders correctly 1`] = `
<div
  class="fd-action-bar"
>
  <!---->
   
  <div
    class="fd-action-bar__header"
  >
    <h1
      class="fd-action-bar__title"
    >
      <div>
        Page Title (slot)
      </div>
    </h1>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`ActionBar Without description renders correctly 1`] = `
<div
  class="fd-action-bar"
>
  <div
    class="fd-action-bar__back"
  >
    Back
  </div>
   
  <div
    class="fd-action-bar__header"
  >
    <h1
      class="fd-action-bar__title"
    >
      
        Page Title
      
    </h1>
     
    <!---->
  </div>
   
  <div
    class="fd-action-bar__actions"
  >
    Actions
  </div>
</div>
`;

exports[`ActionBar renders correctly 1`] = `
<div
  class="fd-action-bar"
>
  <div
    class="fd-action-bar__back"
  >
    Back
  </div>
   
  <div
    class="fd-action-bar__header"
  >
    <h1
      class="fd-action-bar__title"
    >
      
        Page Title
      
    </h1>
     
    <p
      class="fd-action-bar__description"
    >
      
        Action bar description
      
    </p>
  </div>
   
  <div
    class="fd-action-bar__actions"
  >
    Actions
  </div>
</div>
`;
